# smartalloc

./: CMakeLists.txt  CTestConfig.cmake  Makefile
cmake/Modules/: .directory  CPackConfig.cmake  DefineCMakeDefaults.cmake  DefineCompilerFlags.cmake  DefineInstallationPaths.cmake  MacroAddComponent.cmake  MacroAddPackage.cmake  MacroAddUnitTest.cmake  MacroCreateDefaultDirectory.cmake
src/: CMakeLists.txt  smartall.c  smartall.h
test/: CMakeLists.txt  Test1.h  test_a_simple_class.cpp  test_a_simple_class_with_calloc.cpp  test_alloc_one_hundred_objects.c  test_alloc_three_strings.c  test_alloc_two_million_objects.c  test_calloc_one_hundred_objects.c  test_smtest.c
